# mission-control

./: .gitignore  ABG.md  AGENTS.md  README.md  biome.jsonc  biome.usd.jsonc  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  tsconfig.base.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  desktop-command-service.mjs  tauri.conf.json
apps/desktop/src-tauri/src/: desktop_command_approval_tests.rs  desktop_command_bridge.rs  desktop_command_bridge_stream.rs  desktop_command_run_owner_tests.rs  desktop_command_test_support.rs  desktop_command_tests.rs  desktop_commands.rs  lib.rs  main.rs  session_catalog.rs  session_catalog_projection_repair_tests.rs  session_catalog_projection_tests.rs  session_datetime.rs  session_index.rs  session_index_fallback_tests.rs  session_index_format.rs  session_index_format_fields.rs  session_index_format_records.rs  session_index_security_tests.rs  session_index_shape_tests.rs  session_list_tests.rs  session_log_invariant_tests.rs  session_log_scan.rs  session_parse.rs  session_projection.rs  session_protocol.rs  session_read_validation_tests.rs  sessions.rs
apps/desktop/src-tauri/test-fixtures/: desktop-stream-command-service.mjs
docs/: ABG.ko.md  ABG.md  plugin-authoring.md  session-index-schema.sql  v2-desktop-abg-monitor.md
native/sidecar/: Cargo.toml  project.json
native/sidecar/src/: main.rs  protocol.rs  protocol_tests.rs  scheduler.rs
patches/: @opentui__core.patch  @opentui__react.patch
scripts/: coding-agent-built-dist-mcp-smoke.ts  coding-agent-built-dist-smoke.ts  install.sh  (+20 more)
(+490 files in other folders)
