[package]
name = "mission-control-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "mission_control_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
tauri-runtime = ["dep:tauri"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, optional = true }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
